# ai-platform

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  config.py  docker-compose.yml  pyproject.toml
api/: dependencies.py  main.py
benchmarks/: comparison_lab_2.2_vs_2.3.py  lab_1.1_benchmarking.json  lab_1.2_memory_leak_benchmarks.json  lab_1.3_file_chunk_iterator_benchmarks.json  lab_1.4_generator_pipeline_benchmarks.json  lab_2.2_concurrency_trap_benchmarks.json  lab_2.3_controlled_concurrency_benchmarks.json  lab_2.4_async_client_benchmarks.json  lab_2.5_benchmarks.json  lab_3.2_psycopg2_benchmarks.json  lab_3.3_asyncpg_benchmarks.json  lab_3_4_results.json  lab_4.1_gil_proof_benchmarks.json  lab_4.2_benchmarks.json  lab_4.3_benchmarks.json  lab_6.2_semantic_cache.json  lab_6.3_model_routing_actual.json  lab_6.5_cache_benchmarks.json  lab_7.3_retrieval_comparison.json  lab_7.5_deepeval_baseline.json  lab_7.5_event_loop_results.json  lab_7.5_ragas_baseline.json  week_6_cache_benchmark_results.md
docs/: interview_prep.md  week1_learnings.md  week2_learnings.md  week3_learnings.md  week6_learnings.md  week7_learnings.md
scripts/: apply_hnsw_index.py  audit_db.py  clear_legal.py  comparison_lab_2.2_vs_2.3.py  comparison_lab_3.2_vs_3.3.py  generate_compliance_corpus.py  ingest_compliance_corpus.py  lab_1.1_benchmarking.py  lab_1.1_memory_experiments.py  lab_1.2_memory_leak.py  lab_1.3_file_chunk_iterator.py  lab_1.4_generator_pipeline.py  lab_1.5_integration_test.py  lab_2.1_event_loop_explorer.py  lab_2.2_concurrency_trap.py  lab_2.3_controlled_concurrency.py  lab_2.4_async_client_test.py  lab_2.5_integration_test.py  lab_3.1_db_setup.py  lab_3.2_bulk_insert.py  lab_3.2_psycopg2_insert.py  lab_3.3_async_bulk.py  lab_3.4_connection_pool.py  lab_3.4_integration_test.py  lab_4.1_gil_proof.py  lab_4.2_serialization_overhead.py  lab_4.3_hybrid_mt_mp.py  lab_4.4_hybrid_chunking_strategy.py  lab_6.1_cache_aside.py  lab_6.2_semantic_cache.py  lab_6.3_model_routing.py  lab_6.4_cache_integration.py  lab_6.5_cache_benchmarks.py  lab_7.1_vector_failures.py  lab_7.2_migrate_fts.py  lab_7.3_hybrid_retrieval.py  lab_7.5_deepeval.py  (+7 more)
(+30 files in other folders)
