[project]
name = "ai-platform"
version = "0.1.0"
description = "Production-grade AI backend platform"
authors = [
    {name = "salmanfarooq1",email = "salmanfarooq673@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "aiohttp (>=3.13.3,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "fastapi (>=0.137.0,<0.138.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "litellm (>=1.89.2,<2.0.0)",
    "redis[hiredis] (>=8.0.1,<9.0.0)",
    "sentence-transformers (>=5.6.0,<6.0.0)",
    "ragas (>=0.4.3,<0.5.0)",
    "langchain-community (>=0.4.2,<0.5.0)",
    "deepeval (>=4.0.8,<5.0.0)",
    "groq (>=1.5.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
